styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply p-0 m-0 box-border;
  }
  body {
    @apply bg-[#f2f2f2] font-[nunito];
  }
}

@layer components {
  .nav-link {
    @apply mx-1 hover:bg-gray-200 flex items-center 
    justify-center h-8 w-14 md:w-16 rounded transition-all;
  }
  .empty-input {
    @apply empty:before:content-[attr(input-placeholder)] empty:before:opacity-30;
  }
  .flashcard-btn {
    @apply bg-[#b989c2] md:min-w-[10%] rounded hover:bg-[#a77aaf] transition-all duration-100 p-2 mt-2 mx-2;
  }
  .question-list-btn {
    @apply m-[3px] cursor-pointer min-w-[2em] border-none transition-all duration-100 rounded flex items-center justify-center bg-[#e4e4e4] p-1 hover:bg-[#d8d8d8] text-[1.3em];
  }
}

* {
  -webkit-tap-highlight-color: transparent;
}

/* card
.card {
  transform-style: preserve-3d;
  transition: all 0.3s ease;
}
.card-flip {
  transform: rotateY(180deg);
}
.front-card {
  backface-visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}
.back-card {
  backface-visibility: hidden;
  transform: rotateY(180deg);
  display: flex;
  align-items: center;
  justify-content: center;
} */

/* card */
.card {
  background-color: transparent;
  perspective: 1000px;
}

.card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.3s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.card-flip {
  transform: rotateY(180deg);
}

.card-front,
.card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card-back {
  transform: rotateY(180deg);
}

